[package]
name = "rAstCoder"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
selectors ="0.23.0"
tokio = { version = "1.12.0", features = ["full"] }
regex = "1"
